--- a/src/styles/_charts.scss
+++ b/src/styles/_charts.scss
@@ -1,4 +1,3 @@
-
 .charts_hidden {
   display: none;
 }
@@ -19,19 +18,19 @@
   height: 80vh;
 }
 
-@media (--viewport-breakpoint-3) {
+@include breakpoint(3) {
   .charts__specificity-groups-column {
-    padding-right: .5rem;
+    padding-right: 0.5rem;
     width: 50%;
   }
 
   .charts__specificity-groups-pie {
-    padding-left: .5rem;
+    padding-left: 0.5rem;
     width: 50%;
   }
 }
 
-@media (--viewport-breakpoint-4) {
+@include breakpoint(4) {
   .charts__specificity-groups-column {
     width: 66.66667%;
   }
@@ -40,4 +39,3 @@
     width: 33.33333%;
   }
 }
-
