--- a/src/styles/_content-block.scss
+++ b/src/styles/_content-block.scss
@@ -7,12 +7,12 @@
 }
 
 .content-block_highlighted {
-  background-color: rgba(#639, .0625);
+  background-color: rgba(var(--primary-rgb), 0.0625);
 }
 
 .content-block__title,
 .content-block__subtitle {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .content-block__title {
@@ -26,7 +26,7 @@
 .content-block__text,
 .content-block__list {
   font-size: 1rem;
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
 }
 
 .content-block__list {
@@ -38,7 +38,7 @@
   display: inline-block;
 }
 
-@media (--viewport-breakpoint-2) {
+@include breakpoint(2) {
   .content-block_narrow {
     padding: 2rem 0;
   }
@@ -70,9 +70,8 @@
   }
 }
 
-@media (--viewport-breakpoint-4) {
+@include breakpoint(4) {
   .content-block:not(.content-block_narrow) {
     padding: 5rem 0;
   }
 }
-
