--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -1,10 +1,9 @@
-
 .form__textarea {
   border: 1px solid #ccc;
   border-radius: 4px;
   height: 10rem;
-  margin-bottom: .5rem;
-  padding: .75rem;
+  margin-bottom: 0.5rem;
+  padding: 0.75rem;
   resize: none;
   transition: border-color 100ms ease-in;
   width: 100%;
@@ -25,7 +24,7 @@
 }
 
 .form__button {
-  background-color: #639;
+  background-color: var(--primary);
   border: 0;
   border-radius: 4px;
   color: #fff;
@@ -33,7 +32,7 @@
   flex-shrink: 0;
   font-size: 1rem;
   font-weight: 700;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   padding: 1rem 2rem;
   transition: background-color 100ms ease-in;
 }
@@ -51,7 +50,7 @@
   display: none;
 }
 
-@media (--viewport-breakpoint-1) {
+@include breakpoint(1) {
   .form__button-group {
     align-items: center;
     flex-direction: row;
@@ -67,9 +66,8 @@
   }
 }
 
-@media (--viewport-breakpoint-2) {
+@include breakpoint(2) {
   .form__button {
     font-size: 1.25rem;
   }
 }
-
