--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,8 +1,7 @@
-
 .header__title,
 .header__text,
 .header__list {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .header__title {
@@ -24,7 +23,7 @@
   margin-right: 1.5rem;
 }
 
-@media (--viewport-breakpoint-2) {
+@include breakpoint(2) {
   .header__title {
     font-size: 2.5rem;
   }
@@ -34,4 +33,3 @@
     font-size: 1.25rem;
   }
 }
-
